--- a/minemon/settings_example.cfg
+++ b/minemon/settings_example.cfg
@@ -3,8 +3,8 @@
 !hax=disabled
 !unhax=disabled
 !sheen=enabled
-!day=disabled
-!night=disabled
+!day=enabled
+!night=enabled
 !map=enabled
 !kit=disabled
 !tnt=disabled
@@ -12,7 +12,7 @@
 !kill=disabled
 !bow=disabled
 !train=disabled
-!sleep=disabled
+!sleep=enabled
 !stone=disabled
 !wood=disabled
 !dirt=disabled
