--- a/minemon3/example.cfg
+++ b/minemon3/example.cfg
@@ -1,9 +1,19 @@
 [config]
 #minecraft stuff
-logpath=C:\cygwin\home\Oscar\mcserv\server.log
+mcpath=C:\cygwin\home\Oscar\mcserv\
+mapurl=http://eth1.nu/minecraft
+helpurl=http://eth1.nu/minemon
 
 #commands
 !sheen=enabled
+!hax=enabled
+!unhax=enabled
+!day=enabled
+!night=enabled
+!tp=enabled
+!pull=enabled
+!map=enabled
+!help=enabled
 
 #Functions
 login_manner=enabled
