--- a/minemon3/example.cfg
+++ b/minemon3/example.cfg
@@ -14,9 +14,17 @@ helpurl=http://eth1.nu/minemon
 !pull=enabled
 !map=enabled
 !help=enabled
+!roll=enabled
+!rain=enabled
+!xp=enabled
+!kit=enabled
+!leatherset=enabled
+!diamondset=enabled
+
 
 #Functions
 login_manner=enabled
+logout_manner=enabled
 
 #mySQL settings
 mysqlhost=nein
