--- a/minemon3/example.cfg
+++ b/minemon3/example.cfg
@@ -20,6 +20,12 @@ helpurl=http://eth1.nu/minemon
 !kit=enabled
 !leatherset=enabled
 !diamondset=enabled
+!bow=enabled
+!train=enabled
+!sleep=enabled
+!rail=enabled
+!food=enabled
+!item=enabled
 
 
 #Functions
