--- a/minemon3/example.cfg
+++ b/minemon3/example.cfg
@@ -3,6 +3,11 @@
 mcpath=C:\cygwin\home\Oscar\mcserv\
 mapurl=http://eth1.nu/minecraft
 helpurl=http://eth1.nu/minemon
+screen=mc_example
+
+gmail=your_gmail_here
+gmailpw=your_gmail_pw_here
+sendto=target_address_here
 
 #commands
 !sheen=enabled
@@ -26,7 +31,10 @@ helpurl=http://eth1.nu/minemon
 !rail=enabled
 !food=enabled
 !item=enabled
-
+!restart=enabled
+!update=enabled
+!report=enabled
+!monsters=enabled
 
 #Functions
 login_manner=enabled
