--- a/minemon3/example.cfg
+++ b/minemon3/example.cfg
@@ -1,6 +1,6 @@
 [config]
 #minecraft stuff
-mcpath=C:\cygwin\home\Oscar\mcserv\
+mcpath=/home/oscar/mcserv/
 mapurl=http://eth1.nu/minecraft
 helpurl=http://eth1.nu/minemon
 screen=mc_example
@@ -35,17 +35,18 @@ sendto=target_address_here
 !update=enabled
 !report=enabled
 !monsters=enabled
+!temphax=enabled
 
 #Functions
 login_manner=enabled
 logout_manner=enabled
+timetrack=enabled
 
 #mySQL settings
-mysqlhost=nein
-mysqluser=nein
-mysqlpass=nein
-mysqldb=nein
-mysqltable=nein
+mysqlhost=localhost
+mysqluser=root
+mysqlpass=examplepw
+mysqldb=mmuser
 
 #rcon
 rhost=localhost
