--- a/minemon3/example.cfg
+++ b/minemon3/example.cfg
@@ -36,6 +36,7 @@ sendto=target_address_here
 !report=enabled
 !monsters=enabled
 !temphax=enabled
+!played=enabled
 
 #Functions
 login_manner=enabled
