--- a/minemon3/example.cfg
+++ b/minemon3/example.cfg
@@ -4,6 +4,7 @@ mcpath=/home/oscar/mcserv/
 mapurl=http://eth1.nu/minecraft
 helpurl=http://eth1.nu/minemon
 screen=mc_example
+mc_mem=700
 
 gmail=your_gmail_here
 gmailpw=your_gmail_pw_here
